--- a/styles/main.css
+++ b/styles/main.css
@@ -35,7 +35,7 @@ body {
 #noteListContainer {
     background-color: lightblue;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
 }
 
 .note {
@@ -73,4 +73,9 @@ body {
 
 .card-criminal p {
     margin: 2px 0;
+}
+
+.criminals-body {
+    display: flex;
+    flex-flow: row nowrap;
 }
