--- a/styles/main.css
+++ b/styles/main.css
@@ -36,13 +36,14 @@ body {
     background-color: lightblue;
     display: flex;
     flex-flow: column wrap;
+    padding: 10px;
 }
 
 .note {
-    background-color: steelblue;
     border: 3px solid darkslategray;
-    margin: 10px;
+    background-color: rgba(0, 0, 0, .15);
     padding: 10px;
+    margin-bottom: 10px;
     width: 250px;
 }
 
@@ -73,6 +74,10 @@ body {
 
 .card-criminal p {
     margin: 2px 0;
+}
+
+.card-criminal button {
+    margin-top: 10px;
 }
 
 .criminals-body {
