--- a/styles/main.css
+++ b/styles/main.css
@@ -68,7 +68,14 @@ header h1 {
     background-color: rgba(0, 0, 0, .15);
     padding: 10px;
     margin-bottom: 10px;
-    width: 250px;
+}
+
+.note--title {
+    margin-bottom: 10px;
+}
+
+.note--content {
+    margin-bottom: 10px;
 }
 
 .card-officer {
