--- a/styles/criminalCard.css
+++ b/styles/criminalCard.css
@@ -43,3 +43,13 @@
     flex-flow: row nowrap;
     justify-content: space-between;
 }
+
+.criminal-facility h3 {
+    margin: 25px 0 0 0;
+}
+
+.criminal-facility ul {
+    list-style: none;
+    padding-left: 0;
+    margin: 5px 0 0 0;
+}
